2020-07-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Remove unused variables "idfile" and "idstrings", and
	  the associated options -F and --idfile.  These were never used, and
	  were causing warnings with GCC 10.2

	* ike-scan.c: Add "break" statement after call to usage() in options
	  switch statement.  This isn't required as usage() never returns,
	  but it's harmless and prevents a "this statement may fall through"
	  compiler warning with GCC 8.3.0.

	* utils.c: Use labs() rather than abs() when computing time
	  difference as time_t is normally "long" and using abs() generates
	  a compiler warning with GCC 10.2

2020-07-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* README.md, ike-backoff-patterns, ike-scan.1, ike-vendor-ids: Update
	  wiki references to use new URL http://www.royhills.co.uk/wiki/

2014-05-23 Richard Moore <rich@...>

	* ika-scan.c, ike-scan.c: Added option to bind to a specific interface.

2014-03-21 Roy Hills <Roy.Hills@nta-monitor.com>

	* isakmp.c: Added fclose call to fix the potential file pointer
	  resource leak in print_psk_crack_values().

2013-12-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac, .gitignore: Added configure option --enable-gcov to
	  enable gcov code coverage.

2013-11-12 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Disallow the use of both --aggressive and --ikev2 options.
	  This fixes debian bug #512962.

2013-11-10 Roy Hills <Roy.Hills@nta-monitor.com>

	* isakmp.c: Updated attribute maps with new values and updated
	  RFC references.

	* TODO: Removed items that have been addressed or are no longer
	  required.

2013-10-27 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c, ike-scan.h, isakmp.c: Use payload type 43 instead of
	  13 for vendor ID payloads with ikev2. This implementation requires
	  that the --ikev2 or -2 option be specified before the --vendor or -e
	  option to work correctly.

	* isakmp.c: Updated maps from RFC 5996 (new IKEv2 RFC which replaces