@@ -1,28 +1,0 @@
-language: c
-compiler:
-  - gcc
-  - clang
-arch:
-  - amd64
-  - ppc64le
-env:
-  # Default build. Release.
-  - BUILD_ARGS=""
-  # Build using OpenSSL Libary for MD5/SHA1 hash functions
-  - BUILD_ARGS="--with-openssl"
-  # Build with gcov code coverage
-  - BUILD_ARGS="--enable-gcov"
-# gcov code coverage only works with gcc, so don't run it with clang.
-matrix:
-  exclude:
-    - compiler: clang
-      env: BUILD_ARGS="--enable-gcov"
-    - compiler: clang
-      arch: ppc64le
-before_install:
-  - sudo apt-get update -qq
-  - sudo pip install cpp-coveralls
-script: 
-  - autoreconf --install && ./configure $BUILD_ARGS && make && make check
-after_success:
-  - if [ $BUILD_ARGS == "--enable-gcov" ]; then coveralls ; fi
